--- a/src/ThingsGateway.Web.Page/Page/CollectVariableRunTimePage.razor
+++ b/src/ThingsGateway.Web.Page/Page/CollectVariableRunTimePage.razor
@@ -135,7 +135,7 @@
         $"输入变量{collectVariableRunTime.Name}的写入值");
         if (confirm != null)
         {
-            var data=   await rpcCore?.InvokeDeviceMethod($"BLAZOR-{UserResoures.CurrentUser.Account}-{App.HttpContext.Connection.RemoteIpAddress.MapToIPv4().ToString()}",  new NameVaue { Name = collectVariableRunTime.Name, Value = confirm  }, true);
+            var data=   await rpcCore?.InvokeDeviceMethod($"BLAZOR-{UserResoures.CurrentUser.Account}-{App.HttpContext.Connection.RemoteIpAddress.MapToIPv4().ToString()}",  new NameValue { Name = collectVariableRunTime.Name, Value = confirm  }, true);
             if(data.IsSuccess)
             {
                 await InvokeAsync(async () => await PopupService.EnqueueSnackbarAsync(data.Message, AlertTypes.Success));
