分页显示令牌

--- a/src/ThingsGateway.Web.Rcl/Page/Dev/Session.razor
+++ b/src/ThingsGateway.Web.Rcl/Page/Dev/Session.razor
@@ -71,7 +71,7 @@
                   QueryCall="verificatQueryCall"
                   DeleteCall="verificatExit"
                   FilterHeaders="verificatFilterHeaders"
-                  IsMenuOperTemplate=false IsShowToolbar IsPage=false
+                  IsMenuOperTemplate=false IsShowToolbar IsPage=true
                   ShowDeleteButton=@UserResoures.IsHasButtonWithRole("sysverificatdelete")>
 
         <ItemColTemplate>
