--- a/src/ThingsGateway.Web.Rcl/Page/OpenApi/OpenApiSession.razor
+++ b/src/ThingsGateway.Web.Rcl/Page/OpenApi/OpenApiSession.razor
@@ -51,7 +51,7 @@
         <AppDataTable @ref="_verificatinfosDatatable" TItem="VerificatInfo"
                   SearchItem="BasePageInput" AddItem="object" EditItem="object"
                   QueryCall="verificatQueryCall"
-                  DeleteCall="verificatExit" IsPage=false
+                  DeleteCall="verificatExit" IsPage=true
                   FilterHeaders="verificatFilterHeaders"
                   IsMenuOperTemplate=false IsShowToolbar
                   ShowDeleteButton=@UserResoures.IsHasButtonWithRole("openapiverificatdelete")>
