--- a/src/ThingsGateway.Web.Page/Page/HardwareInfoPage.razor
+++ b/src/ThingsGateway.Web.Page/Page/HardwareInfoPage.razor
@@ -14,6 +14,7 @@
 @inject UserResoures UserResoures
 @inject NavigationManager NavigationManager
 @inject IDriverPluginService DriverPluginService
+@implements IDisposable
 @layout MainLayout
 
 <MRow NoGutters>
@@ -269,5 +270,8 @@
     {
         await InvokeAsync(StateHasChanged);
     }
-
+    public void Dispose()
+    {
+        DelayTimer.Dispose();
+    }
 }
