--- a/src/ThingsGateway.Web.Page/Page/UploadDevicePage.razor
+++ b/src/ThingsGateway.Web.Page/Page/UploadDevicePage.razor
@@ -169,7 +169,7 @@
             using var memoryStream = await UploadDeviceService.ExportFile();
             memoryStream.Seek(0, SeekOrigin.Begin);
             using var streamRef = new DotNetStreamReference(stream: memoryStream);
-            await JS.InvokeVoidAsync("downloadFileFromStream", $"上传设备导出{DateTime.Now.ToString("MM-dd-HH-mm-ss")}.xlsx", streamRef);
+            await JS.InvokeVoidAsync("downloadFileFromStream", $"上传设备导出{DateTime.UtcNow.ToString("MM-dd-HH-mm-ss")}.xlsx", streamRef);
         }
         finally
         {
