--- a/src/ThingsGateway.Web.Page/Page/ValueHisPage.razor
+++ b/src/ThingsGateway.Web.Page/Page/ValueHisPage.razor
@@ -23,17 +23,18 @@
 
         <MMenu CloseOnContentClick="false" OffsetY Context="menu">
             <ActivatorContent>
-                <MTextField Dense Readonly Style="max-width:200px;" HideDetails=@("auto") Class="my-1  mx-2 " @bind-Value="context.StartTime" Clearable
+                <MTextField Dense Readonly Style="max-width:200px;" HideDetails=@("auto") Class="my-1  mx-2 " Value="context.StartTime.GetValueOrDefault().Add(JsInitVariables.TimezoneOffset)"
+                 Clearable
                             @attributes="menu.Attrs" Outlined Label=@context.Description(x => x.StartTime) />
             </ActivatorContent>
             <ChildContent>
                 <AppDateTimePicker ClassString="my-1  mx-2 " @bind-Value="context.StartTime"></AppDateTimePicker>
             </ChildContent>
-        </MMenu>
+            </MMenu>
 
-            <MMenu CloseOnContentClick="false" OffsetY  Context="menu">
+            <MMenu CloseOnContentClick="false" OffsetY Context="menu">
             <ActivatorContent>
-                <MTextField Dense Readonly Style="max-width:200px;" HideDetails=@("auto") Class="my-1  mx-2 " @bind-Value="context.EndTime" Clearable
+                <MTextField Dense Readonly Style="max-width:200px;" HideDetails=@("auto") Class="my-1  mx-2 " Value="context.EndTime.GetValueOrDefault().Add(JsInitVariables.TimezoneOffset)" Clearable
                             @attributes="menu.Attrs" Outlined Label=@context.Description(x => x.EndTime) />
             </ActivatorContent>
             <ChildContent>
@@ -49,20 +50,15 @@
     </SearchTemplate>
 
     <ItemColTemplate>
-        @switch (context.Header.Value)
+        @if (context.Header.Value == nameof(context.Item.Quality))
         {
-            case nameof(context.Item.CollectTime):
-                <span>
-                    @(((DateTime)context.Value).ToString("yyyy-MM-dd HH:mm:ss ffffff"))
-                </span>
-                break;
-            case nameof(context.Item.Quality):
-                <EnableChip Value="context.Item.Quality==192" DisabledLabel=@context.Item.Quality.ToString() EnabledLabel=@context.Item.Quality.ToString()>
-                </EnableChip>
-                break;
-            default:
-                @context.Value
-                break;
+            <EnableChip Value="context.Item.Quality==192" DisabledLabel=@context.Item.Quality.ToString() EnabledLabel=@context.Item.Quality.ToString()>
+            </EnableChip>
+        }
+
+        else
+        {
+            @context.Value
 
         }
 
@@ -72,10 +68,10 @@
 
 
 @code {
-
     [Parameter]
     [SupplyParameterFromQuery]
     public string DeviceName { get; set; }
+    [Inject] public JsInitVariables JsInitVariables { get; set; } = default!;
 
     HisPageInput _searchModel { get; set; } = new();
     private IAppDataTable _datatable;
