启用开发环境web详细日志，调整App.Razor位置，添加网页ico

--- a/src/ThingsGateway.Web.Rcl.Core/BlazorApp.razor
+++ b/src/ThingsGateway.Web.Rcl.Core/BlazorApp.razor
@@ -1,4 +1,6 @@
 @using System.Reflection;
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.Routing
 @inject NavigationManager NavigationManager
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(BlazorApp).Assembly" AdditionalAssemblies=@(GetAssemblys())>
