验证码更新修复

--- a/src/ThingsGateway.Web.Rcl.Core/Shared/Auth/Login.razor
+++ b/src/ThingsGateway.Web.Rcl.Core/Shared/Auth/Login.razor
@@ -82,7 +82,7 @@ else
         </MTextField>
         @if (_showCaptcha)
         {
-            <PImageCaptcha @bind-Value="CaptchaValue"
+            <PImageCaptcha @ref=captcha @bind-Value="CaptchaValue"
                    TextFieldClass="mt-10 mx-auto"
                    Height="60"
                    Label=@T("验证码") Outlined
